added font-awesome, bootstrap 3.3.7, and colors scheme

--- a/index.html
+++ b/index.html
@@ -9,11 +9,19 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- google font -->
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i" rel="stylesheet">
+	<!-- local font-awesome 5 -->
+	<script defer src="css/font-awesome/js/fontawesome-all.js"></script>
+	<!-- bootstrap CSS -->
+	<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
 	<!-- custom CSS -->
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<h1>Welcome to Vesco</h1>
+	<h1>Welcome to Vesco!</h1>
+
+	<i class="fas fa-laptop fa-2x"></i>
 
 
 
@@ -28,9 +36,11 @@
 
 
 
-	
+
 <!-- jQuery -->
 <script src="js/jquery.js"></script>
+<!-- bootstrap javascript -->
+<script src="js/bootstrap/bootstrap.min.js"></script>
 <!-- external javascript -->
 <script src="js/custom.js"></script>
 </body>
