--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <script defer src="css/font-awesome/js/fontawesome-all.js"></script>
     <!-- bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
+    <!-- animte.css -->
+    <link rel="stylesheet" href="css/animate/animate.css">
     <!-- custom CSS -->
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -23,27 +25,23 @@
 
     <section id="home">
 
-        <div id="home-cover">
+        <div id="home-cover" class="bg-parallax animated fadeIn">
 
             <div id="home-content-box">
 
                 <div id="home-content-box-inner">
 
-                    <div id="home-heading">
-                        <h3>Watch Out <br> The Modern Responsive Website!</h3>
+                    <div id="home-heading" class="animated zoomIn">
+                    	<h3>Watch Out <br> The Modern Responsive Website!</h3>
                     </div>
 
-                    <div id="home-btn">
+                    <div id="home-btn" class="animated zoomIn">
                         <a class="btn btn-lg btn-general btn-white" role="button" href="#work" title="View Our Work">View Our Work</a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
-
-
-
 
 
     <!-- jQuery -->
