finished services section, but WOW doesn't function

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-
+	<!-- Home -->
     <section id="home">
 
         <div id="home-cover" class="bg-parallax animated fadeIn">
@@ -43,11 +43,108 @@
         </div>
     </section>
 
+    <section id="services">
+
+    	<div class="content-box">
+
+    		<div class="content-title wow fadeInDown">
+    			<h3>Services</h3>
+    			<div class="content-title-underline"></div>
+    		</div>
+
+    		<div class="container">
+    			<div class="row">
+    				<div class="col-md-4">
+    					<div class="service-item">
+    						<div class="service-item-icon">
+    							<i class="fas fa-paint-brush fa-3x"></i>
+    						</div>
+    						<div class="service-item-title">
+    							<h3>Web Design</h3>
+    						</div>
+    						<div class="service-item-desc">
+    							<p>Adipisicing quis in nulla voluptate dolor pariatur in culpa ea minim deserunt eiusmod occaecat id ex laboris voluptate laboris dolor in ut enim in dolore dolor sit eiusmod labore et aliquip sed commodo do velit eiusmod.</p>
+    						</div>
+    					</div>
+    				</div>
+
+    				<div class="col-md-4">
+    					<div class="service-item">
+    						<div class="service-item-icon">
+    							<i class="fas fa-laptop fa-3x"></i>
+    						</div>
+    						<div class="service-item-title">
+    							<h3>Web Development</h3>
+    						</div>
+    						<div class="service-item-desc">
+    							<p>Adipisicing quis in nulla voluptate dolor pariatur in culpa ea minim deserunt eiusmod occaecat id ex laboris voluptate laboris dolor in ut enim in dolore dolor sit eiusmod labore et aliquip sed commodo do velit eiusmod.</p>
+    						</div>
+    					</div>
+    				</div>	
+    				<div class="col-md-4">
+    					<div class="service-item">
+    						<div class="service-item-icon">
+    							<i class="fas fa-tablet fa-3x"></i>
+    						</div>
+    						<div class="service-item-title">
+    							<h3>Mobile Apps</h3>
+    						</div>
+    						<div class="service-item-desc">
+    							<p>Adipisicing quis in nulla voluptate dolor pariatur in culpa ea minim deserunt eiusmod occaecat id ex laboris voluptate laboris dolor in ut enim in dolore dolor sit eiusmod labore et aliquip sed commodo do velit eiusmod.</p>
+    						</div>
+    					</div>
+    				</div>
+    				<div class="col-md-4">
+    					<div class="service-item">
+    						<div class="service-item-icon">
+    							<i class="fas fa-search fa-3x"></i>
+    						</div>
+    						<div class="service-item-title">
+    							<h3>SEO Optimization</h3>
+    						</div>
+    						<div class="service-item-desc">
+    							<p>Adipisicing quis in nulla voluptate dolor pariatur in culpa ea minim deserunt eiusmod occaecat id ex laboris voluptate laboris dolor in ut enim in dolore dolor sit eiusmod labore et aliquip sed commodo do velit eiusmod.</p>
+    						</div>
+    					</div>
+    				</div>
+    				<div class="col-md-4">
+    					<div class="service-item">
+    						<div class="service-item-icon">
+    							<i class="far fa-edit fa-3x"></i>
+    						</div>
+    						<div class="service-item-title">
+    							<h3>UX Design</h3>
+    						</div>
+    						<div class="service-item-desc">
+    							<p>Adipisicing quis in nulla voluptate dolor pariatur in culpa ea minim deserunt eiusmod occaecat id ex laboris voluptate laboris dolor in ut enim in dolore dolor sit eiusmod labore et aliquip sed commodo do velit eiusmod.</p>
+    						</div>
+    					</div>
+    				</div>	
+    				<div class="col-md-4">
+    					<div class="service-item">
+    						<div class="service-item-icon">
+    							<i class="far fa-life-ring fa-3x"></i>
+    						</div>
+    						<div class="service-item-title">
+    							<h3>Support</h3>
+    						</div>
+    						<div class="service-item-desc">
+    							<p>Adipisicing quis in nulla voluptate dolor pariatur in culpa ea minim deserunt eiusmod occaecat id ex laboris voluptate laboris dolor in ut enim in dolore dolor sit eiusmod labore et aliquip sed commodo do velit eiusmod.</p>
+    						</div>
+    					</div>
+    				</div>			
+    			</div>	
+    		</div>	
+    	</div>
+    </section>	
+
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
     <!-- bootstrap javascript -->
     <script src="js/bootstrap/bootstrap.min.js"></script>
+    <!-- WOW JS -->
+    <script src="js/wow/wow.min.js"></script>
     <!-- external javascript -->
     <script src="js/custom.js"></script>
 </body>
