--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     	<div class="content-box">
 
-    		<div class="content-title wow fadeInDown">
+    		<div class="content-title">
     			<h3>Services</h3>
     			<div class="content-title-underline"></div>
     		</div>
