--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     	<div class="content-box">
 
-    		<div class="content-title">
+    		<div class="content-title wow animated fadeInDown" data-wow-duration="1s" data-wow-delay=".5s"">
     			<h3>Services</h3>
     			<div class="content-title-underline"></div>
     		</div>
@@ -67,7 +67,6 @@
     						</div>
     					</div>
     				</div>
-
     				<div class="col-md-4">
     					<div class="service-item">
     						<div class="service-item-icon">
@@ -136,6 +135,35 @@
     			</div>	
     		</div>	
     	</div>
+    </section>
+
+    <section id="about">
+        <!-- About right side with diagonal BG parallax -->
+        <div id="about-bg-diagonal" class="bg-parallax"></div>
+
+        <!-- About left side with content -->
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div id="about-content-box">
+                        <div id="about-content-box-outer">
+                            <div id="about-content-box-inner">
+                                <div class="content-title wow animated fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
+                                    <h3>About Vesco</h3>
+                                    <div class="content-title-underline"></div>
+                                </div>
+                                <div id="about-desc" class="wow animated fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
+                                    <p>Cillum reprehenderit enim laborum reprehenderit non ex est laborum proident ut eiusmod sed nulla eu laboris commodo officia nostrud fugiat exercitation eiusmod adipisicing aliqua tempor nulla ut pariatur nostrud deserunt in tempor adipisicing consequat amet dolor fugiat.</p>
+                                </div>
+                                <div id="about-btn" class="wow animated fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
+                                    <a class="btn btn-lg btn-general btn-blue" role="button" href="#work" title="View Our Work">Our Work</a>
+                                </div>
+                            </div> 
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>	
 
 
