--- a/index.html
+++ b/index.html
@@ -1,180 +1,37 @@
+
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <title>Vesco</title>
-    <!-- favicon -->
-    <link rel="shortcut icon" href="img/favicon.ico">
-    <!-- required meta tags -->
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- google font -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i" rel="stylesheet">
-    <!-- font-awesome 5 -->
-    <script defer src="css/font-awesome/js/fontawesome-all.js"></script>
-    <!-- bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
-    <!-- animte.css -->
-    <link rel="stylesheet" href="css/animate/animate.css">
-    <!-- custom CSS -->
-    <link rel="stylesheet" href="css/style.css">
+	<title>Vesco</title>
+	<!-- favicon -->
+	<link rel="shortcut icon" href="img/favicon.ico">
+	<!-- required meta tags -->
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- custom CSS -->
+	<link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
-	<!-- Home -->
-    <section id="home">
-
-        <div id="home-cover" class="bg-parallax animated fadeIn">
-
-            <div id="home-content-box">
-
-                <div id="home-content-box-inner">
-
-                    <div id="home-heading" class="animated zoomIn">
-                    	<h3>Watch Out <br> The Modern Responsive Website!</h3>
-                    </div>
-
-                    <div id="home-btn" class="animated zoomIn">
-                        <a class="btn btn-lg btn-general btn-white" role="button" href="#work" title="View Our Work">View Our Work</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="services">
-
-    	<div class="content-box">
-
-    		<div class="content-title wow animated fadeInDown" data-wow-duration="1s" data-wow-delay=".5s"">
-    			<h3>Services</h3>
-    			<div class="content-title-underline"></div>
-    		</div>
-
-    		<div class="container">
-    			<div class="row">
-    				<div class="col-md-4">
-    					<div class="service-item">
-    						<div class="service-item-icon">
-    							<i class="fas fa-paint-brush fa-3x"></i>
-    						</div>
-    						<div class="service-item-title">
-    							<h3>Web Design</h3>
-    						</div>
-    						<div class="service-item-desc">
-    							<p>Adipisicing quis in nulla voluptate dolor pariatur in culpa ea minim deserunt eiusmod occaecat id ex laboris voluptate laboris dolor in ut enim in dolore dolor sit eiusmod labore et aliquip sed commodo do velit eiusmod.</p>
-    						</div>
-    					</div>
-    				</div>
-    				<div class="col-md-4">
-    					<div class="service-item">
-    						<div class="service-item-icon">
-    							<i class="fas fa-laptop fa-3x"></i>
-    						</div>
-    						<div class="service-item-title">
-    							<h3>Web Development</h3>
-    						</div>
-    						<div class="service-item-desc">
-    							<p>Adipisicing quis in nulla voluptate dolor pariatur in culpa ea minim deserunt eiusmod occaecat id ex laboris voluptate laboris dolor in ut enim in dolore dolor sit eiusmod labore et aliquip sed commodo do velit eiusmod.</p>
-    						</div>
-    					</div>
-    				</div>	
-    				<div class="col-md-4">
-    					<div class="service-item">
-    						<div class="service-item-icon">
-    							<i class="fas fa-tablet fa-3x"></i>
-    						</div>
-    						<div class="service-item-title">
-    							<h3>Mobile Apps</h3>
-    						</div>
-    						<div class="service-item-desc">
-    							<p>Adipisicing quis in nulla voluptate dolor pariatur in culpa ea minim deserunt eiusmod occaecat id ex laboris voluptate laboris dolor in ut enim in dolore dolor sit eiusmod labore et aliquip sed commodo do velit eiusmod.</p>
-    						</div>
-    					</div>
-    				</div>
-    				<div class="col-md-4">
-    					<div class="service-item">
-    						<div class="service-item-icon">
-    							<i class="fas fa-search fa-3x"></i>
-    						</div>
-    						<div class="service-item-title">
-    							<h3>SEO Optimization</h3>
-    						</div>
-    						<div class="service-item-desc">
-    							<p>Adipisicing quis in nulla voluptate dolor pariatur in culpa ea minim deserunt eiusmod occaecat id ex laboris voluptate laboris dolor in ut enim in dolore dolor sit eiusmod labore et aliquip sed commodo do velit eiusmod.</p>
-    						</div>
-    					</div>
-    				</div>
-    				<div class="col-md-4">
-    					<div class="service-item">
-    						<div class="service-item-icon">
-    							<i class="far fa-edit fa-3x"></i>
-    						</div>
-    						<div class="service-item-title">
-    							<h3>UX Design</h3>
-    						</div>
-    						<div class="service-item-desc">
-    							<p>Adipisicing quis in nulla voluptate dolor pariatur in culpa ea minim deserunt eiusmod occaecat id ex laboris voluptate laboris dolor in ut enim in dolore dolor sit eiusmod labore et aliquip sed commodo do velit eiusmod.</p>
-    						</div>
-    					</div>
-    				</div>	
-    				<div class="col-md-4">
-    					<div class="service-item">
-    						<div class="service-item-icon">
-    							<i class="far fa-life-ring fa-3x"></i>
-    						</div>
-    						<div class="service-item-title">
-    							<h3>Support</h3>
-    						</div>
-    						<div class="service-item-desc">
-    							<p>Adipisicing quis in nulla voluptate dolor pariatur in culpa ea minim deserunt eiusmod occaecat id ex laboris voluptate laboris dolor in ut enim in dolore dolor sit eiusmod labore et aliquip sed commodo do velit eiusmod.</p>
-    						</div>
-    					</div>
-    				</div>			
-    			</div>	
-    		</div>	
-    	</div>
-    </section>
-
-    <section id="about">
-        <!-- About right side with diagonal BG parallax -->
-        <div id="about-bg-diagonal" class="bg-parallax"></div>
-
-        <!-- About left side with content -->
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <div id="about-content-box">
-                        <div id="about-content-box-outer">
-                            <div id="about-content-box-inner">
-                                <div class="content-title wow animated fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
-                                    <h3>About Vesco</h3>
-                                    <div class="content-title-underline"></div>
-                                </div>
-                                <div id="about-desc" class="wow animated fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
-                                    <p>Cillum reprehenderit enim laborum reprehenderit non ex est laborum proident ut eiusmod sed nulla eu laboris commodo officia nostrud fugiat exercitation eiusmod adipisicing aliqua tempor nulla ut pariatur nostrud deserunt in tempor adipisicing consequat amet dolor fugiat.</p>
-                                </div>
-                                <div id="about-btn" class="wow animated fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
-                                    <a class="btn btn-lg btn-general btn-blue" role="button" href="#work" title="View Our Work">Our Work</a>
-                                </div>
-                            </div> 
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>	
+	<h1>Welcome to Vesco</h1>
 
 
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
-    <!-- bootstrap javascript -->
-    <script src="js/bootstrap/bootstrap.min.js"></script>
-    <!-- WOW JS -->
-    <script src="js/wow/wow.min.js"></script>
-    <!-- external javascript -->
-    <script src="js/custom.js"></script>
+
+
+
+
+
+
+
+
+
+
+
+
+	
+<!-- jQuery -->
+<script src="js/jquery.js"></script>
+<!-- external javascript -->
+<script src="js/custom.js"></script>
 </body>
-
 </html>
