started work section

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 </head>
 
 <body>
+
 	<!-- Home -->
     <section id="home">
 
@@ -36,13 +37,14 @@
                     </div>
 
                     <div id="home-btn" class="animated zoomIn">
-                        <a class="btn btn-lg btn-general btn-white" role="button" href="#work" title="View Our Work">View Our Work</a>
+                        <a class="btn btn-lg btn-general btn-white" role="button" href="#work">View Our Work</a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
+    <!-- Services -->
     <section id="services">
 
     	<div class="content-box">
@@ -89,7 +91,7 @@
     							<h3>Mobile Apps</h3>
     						</div>
     						<div class="service-item-desc">
-    							<p>Adipisicing quis in nulla voluptate dolor pariatur in culpa ea minim deserunt eiusmod occaecat id ex laboris voluptate laboris dolor in ut enim in dolore dolor sit eiusmod labore et aliquip sed commodo do velit eiusmod.</p>
+    							<p>Sint mollit aliquip excepteur do dolor eiusmod deserunt mollit labore reprehenderit proident in magna quis ea irure aliqua est veniam nostrud tempor quis reprehenderit sunt sit dolore aliquip ut amet sint dolor eu tempor.</p>
     						</div>
     					</div>
     				</div>
@@ -102,7 +104,7 @@
     							<h3>SEO Optimization</h3>
     						</div>
     						<div class="service-item-desc">
-    							<p>Adipisicing quis in nulla voluptate dolor pariatur in culpa ea minim deserunt eiusmod occaecat id ex laboris voluptate laboris dolor in ut enim in dolore dolor sit eiusmod labore et aliquip sed commodo do velit eiusmod.</p>
+    							<p>Esse ea ea sint in dolor nulla qui do pariatur eu proident tempor ad officia irure dolore officia eiusmod reprehenderit est nulla laborum commodo velit ex labore occaecat dolor duis mollit nisi cillum.</p>
     						</div>
     					</div>
     				</div>
@@ -115,7 +117,7 @@
     							<h3>UX Design</h3>
     						</div>
     						<div class="service-item-desc">
-    							<p>Adipisicing quis in nulla voluptate dolor pariatur in culpa ea minim deserunt eiusmod occaecat id ex laboris voluptate laboris dolor in ut enim in dolore dolor sit eiusmod labore et aliquip sed commodo do velit eiusmod.</p>
+    							<p>Dolor exercitation ut tempor cillum proident ut magna mollit fugiat enim sit mollit deserunt sed enim excepteur ea est laborum incididunt adipisicing duis id sunt consequat eu occaecat.</p>
     						</div>
     					</div>
     				</div>	
@@ -128,7 +130,7 @@
     							<h3>Support</h3>
     						</div>
     						<div class="service-item-desc">
-    							<p>Adipisicing quis in nulla voluptate dolor pariatur in culpa ea minim deserunt eiusmod occaecat id ex laboris voluptate laboris dolor in ut enim in dolore dolor sit eiusmod labore et aliquip sed commodo do velit eiusmod.</p>
+    							<p>Ea cupidatat quis veniam duis minim ullamco reprehenderit velit ut ullamco fugiat commodo dolore commodo voluptate irure non cupidatat nostrud irure sunt qui mollit cupidatat labore anim mollit minim in ut occaecat reprehenderit labore.</p>
     						</div>
     					</div>
     				</div>			
@@ -136,7 +138,8 @@
     		</div>	
     	</div>
     </section>
-
+    
+    <!-- About -->
     <section id="about">
         <!-- About right side with diagonal BG parallax -->
         <div id="about-bg-diagonal" class="bg-parallax"></div>
@@ -164,7 +167,84 @@
                 </div>
             </div>
         </div>
-    </section>	
+    </section>
+
+    <!-- Work -->
+    <section id="work">
+
+        <div class="content-box">
+            <div class="content-title wow animated fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
+                <h3>Work</h3>
+                <div class="content-title-underline"></div>
+            </div>
+
+            <div class="container">
+                <div class="row wow animated fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
+                    <div class="col-md-3">
+                        <div class="img-wrapper">
+                            <a href="img/work/1.jpg/">
+                                <img src="img/work/1.jpg" class="img-responsive" alt="work">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="img-wrapper">
+                            <a href="img/work/2.jpg/">
+                                <img src="img/work/2.jpg" class="img-responsive" alt="work">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="img-wrapper">
+                            <a href="img/work/3.jpg/">
+                                <img src="img/work/3.jpg" class="img-responsive" alt="work">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="img-wrapper">
+                            <a href="img/work/4.jpg/">
+                                <img src="img/work/4.jpg" class="img-responsive" alt="work">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="img-wrapper">
+                            <a href="img/work/5.jpg/">
+                                <img src="img/work/5.jpg" class="img-responsive" alt="work">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="img-wrapper">
+                            <a href="img/work/6.jpg/">
+                                <img src="img/work/6.jpg" class="img-responsive" alt="work">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="img-wrapper">
+                            <a href="img/work/7.jpg/">
+                                <img src="img/work/7.jpg" class="img-responsive" alt="work">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="img-wrapper">
+                            <a href="img/work/8.jpg/">
+                                <img src="img/work/8.jpg" class="img-responsive" alt="work">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
 
 
     <!-- jQuery -->
